; ModuleID = '/home/carl/AnghaBench/oss-fuzz/projects/zlib/extr_minigzip_fuzzer.c_file_compress.c'
source_filename = "/home/carl/AnghaBench/oss-fuzz/projects/zlib/extr_minigzip_fuzzer.c_file_compress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_NAME_LEN = common dso_local global i32 0, align 4
@GZ_SUFFIX = common dso_local global i8* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"%s: filename too long\0A\00", align 1
@prog = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"%s: can't gzopen %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @file_compress(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i32, i32* @MAX_NAME_LEN, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %5, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %6, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @strlen(i8* %13)
  %15 = load i8*, i8** @GZ_SUFFIX, align 8
  %16 = call i32 @strlen(i8* %15)
  %17 = add nsw i32 %14, %16
  %18 = sext i32 %17 to i64
  %19 = icmp uge i64 %18, %10
  br i1 %19, label %20, label %25

20:                                               ; preds = %2
  %21 = load i32, i32* @stderr, align 4
  %22 = load i8*, i8** @prog, align 8
  %23 = call i32 (i32, i8*, i8*, ...) @fprintf(i32 %21, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %22)
  %24 = call i32 @exit(i32 1) #4
  unreachable

25:                                               ; preds = %2
  %26 = trunc i64 %10 to i32
  %27 = load i8*, i8** %3, align 8
  %28 = load i8*, i8** @GZ_SUFFIX, align 8
  %29 = call i32 @snprintf(i8* %12, i32 %26, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* %27, i8* %28)
  %30 = load i8*, i8** %3, align 8
  %31 = call i32* @fopen(i8* %30, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  store i32* %31, i32** %7, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = icmp eq i32* %32, null
  br i1 %33, label %34, label %38

34:                                               ; preds = %25
  %35 = load i8*, i8** %3, align 8
  %36 = call i32 @perror(i8* %35)
  %37 = call i32 @exit(i32 1) #4
  unreachable

38:                                               ; preds = %25
  %39 = load i8*, i8** %4, align 8
  %40 = call i32* @gzopen(i8* %12, i8* %39)
  store i32* %40, i32** %8, align 8
  %41 = load i32*, i32** %8, align 8
  %42 = icmp eq i32* %41, null
  br i1 %42, label %43, label %48

43:                                               ; preds = %38
  %44 = load i32, i32* @stderr, align 4
  %45 = load i8*, i8** @prog, align 8
  %46 = call i32 (i32, i8*, i8*, ...) @fprintf(i32 %44, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0), i8* %45, i8* %12)
  %47 = call i32 @exit(i32 1) #4
  unreachable

48:                                               ; preds = %38
  %49 = load i32*, i32** %7, align 8
  %50 = load i32*, i32** %8, align 8
  %51 = call i32 @gz_compress(i32* %49, i32* %50)
  %52 = load i8*, i8** %3, align 8
  %53 = call i32 @unlink(i8* %52)
  %54 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %54)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @fprintf(i32, i8*, i8*, ...) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*) #2

declare dso_local i32* @fopen(i8*, i8*) #2

declare dso_local i32 @perror(i8*) #2

declare dso_local i32* @gzopen(i8*, i8*) #2

declare dso_local i32 @gz_compress(i32*, i32*) #2

declare dso_local i32 @unlink(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
